navbar fixed on mobile devices

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -128,3 +128,12 @@ input[type='checkbox'] {
 @media only screen and (max-width: 768px) {
     .search-form {width:100%;}
 }
+.navbar-nav {
+	float:left;
+	margin:0;
+}
+.navbar-nav li {float:left;}
+.navbar-nav>li>a {
+	padding-top:14.5px;
+	padding-bottom:14.5px;
+}
